--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "firebase": "^10.8.0",
-    "@heroicons/react": "^2.1.1"
-  },
-  "devDependencies": {
+    "@heroicons/react": "^2.1.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
